# martes.app

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
.github/workflows/: cd.yml
apps/landing/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.mjs
apps/landing-us/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.mjs
apps/landing-us/public/: robots.txt  sitemap.xml
apps/landing-us/src/content/: config.ts
apps/landing-us/src/layouts/: BlogLayout.astro  DocsLayout.astro  Layout.astro
apps/landing-us/src/pages/: index.astro
apps/landing-ve/: Dockerfile  nginx.conf  package.json  tailwind.config.mjs
apps/landing-ve/public/: robots.txt  sitemap.xml
apps/landing-ve/src/components/: ComoFunciona.astro  Contact.astro  Ecosystem-unificado.astro  Hero.astro  Productos.astro  Rubros.astro  WhatsappFloat.astro
apps/landing-ve/src/layouts/: LayoutUS.astro  LayoutVE.astro
apps/landing-ve/src/pages/: index.astro  us-version.astro
apps/landing/public/: robots.txt  sitemap.xml
apps/landing/src/components/: Comparativa.astro  Contact.astro  Dolores.astro  Hero.astro  Integraciones.astro  LoQueCubrimos.astro  PorQueMartes.astro  Producto.astro  WhatsappFloat.astro
apps/landing/src/content/: config.ts
apps/landing/src/layouts/: BlogLayout.astro  DocsLayout.astro  Layout.astro  LayoutUS.astro  LayoutVE.astro
apps/meta-agent/: Dockerfile  pyproject.toml
apps/meta-agent/src/: __init__.py  agent.py  config.py  knowledge_loader.py  main.py  shared.py  storage.py  team.py
apps/meta-agent/src/agents/: billing.py  diagnosticador.py  operador.py  skill_builder.py
apps/meta-agent/src/knowledge/: __init__.py  config_reference.md  hermes_reference.md  procedures.md
apps/meta-agent/src/skills/backup-restore/: SKILL.md
apps/meta-agent/src/skills/blog-landing/: SKILL.md
apps/meta-agent/src/skills/comandos/: SKILL.md
apps/meta-agent/src/skills/hermes-config/: SKILL.md
apps/meta-agent/src/skills/hermes-troubleshooting/: SKILL.md
apps/meta-agent/src/skills/integrations/: SKILL.md
apps/meta-agent/src/skills/monitoring-alerts/: SKILL.md
apps/meta-agent/src/skills/network-security/: SKILL.md
apps/meta-agent/src/skills/tenant-management/: SKILL.md
apps/meta-agent/src/skills/tenant-onboarding/: SKILL.md
apps/meta-agent/src/tools/: __init__.py  docker_ops.py  health.py  read_ops.py  tenant_config.py  tenant_db.py  write_ops.py
apps/meta-agent/tests/: test_backup_restore.py  test_backup_security.py  test_billing_edge_cases.py  test_billing_logic.py  test_byok_logic.py  test_diagnostic_tools.py  test_healthcheck_logic.py  test_inject_credential.py  test_update_tenant_resources.py  test_validation.py
db/migrations/: 001_initial_schema.sql  002_single_plan.sql  004_server_metrics_backup_log.sql
docs/: 00-ARCHITECTURE-PLAN.md  01-DEEP-RESEARCH-FINDINGS.md  02-DOCKER-INFRA-EXPLAINED.md  03-WHATS-NEXT-DECISION-MATRIX.md  04-PRODUCT-DECISIONS-FINAL.md  05-MEMORY-WIKI-LLM-DECISIONS.md  06-ADDONS-COMPOSIO-MEMORY.md  07-IMPLEMENTATION-START.md  08-VALIDATION-AUDIT.md  09-SPRINT2-PLAN.md  10-KNOWLEDGE-SKILLS-GUIDE.md  10-ROADMAP.md  11-AUDITORIA-PLATAFORMA-GAPS.md  11-HERMES-DEPLOYMENT-GUIDE.md  12-INFRA-AUDIT-AND-DASHBOARD-SPEC.md  13-HERMES-OPTIMIZATION-GUIDE.md  14-HERMES-RESTART-UPDATE-GUIDE.md  15-HERMES-RESTART-WHY-AND-HOW.md  16-DEPLOY-PLAN-DOMAIN.md  SPRINT-G-PLAN.md  hermes-ops-guide.md  hermes-tenants.md  observability.md  token-budget-model.md
docs/hermes-guia/: 00-PARADIGMA-PLATAFORMA.md  01-CAPACIDADES-COMPLETAS.md  02-CONTEXTO-VENEZOLANO.md  03-MEJORES-PRACTICAS.md  04-INTEGRACIONES-TOOLS.md  05-PITCH-PYME.md  06-AGENTES-DERIVADOS-MULTIAGENTE.md  07-POCKETBASE-CRM-INVESTIGACION.md  08-ARQUITECTURA-POCKETBASE-COMPLETA.md
infra/: .env.example  Dockerfile.webhook  docker-compose.yml
infra/scripts/: deploy.sh  webhook.py
infra/templates/basico/: SOUL.md  config.yaml  env.template
infra/templates/default/: SOUL.md  config.yaml
infra/templates/equipo/: SOUL.md  config.yaml  env.template
infra/templates/pro/: SOUL.md  config.yaml  env.template
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
(+28 files in other folders)
