[project]
name = "martes-meta-agent"
version = "0.1.0"
description = "Meta-agente Agno para gestionar tenants Hermes en martes.app"
requires-python = ">=3.12"
dependencies = [
    # Versiones pineadas exactas (==x.y.z) — filosofía martes.app
    # Refs verificadas en PyPI mayo 2026
    "agno[telegram]==2.6.8",
    "fastapi==0.136.1",
    "uvicorn[standard]==0.47.0",
    "openai==2.37.0",
    "psycopg[binary]==3.3.4",
    "docker==7.1.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "pyyaml==6.0.3",
    "sqlalchemy==2.0.49",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
